--- a/hpbd.html
+++ b/hpbd.html
@@ -7,7 +7,7 @@
 
 <body style="background-color:pink;padding:20px;text-align:center;">
 	<audio loop autoplay>
-		<source src="ChucMungSinhNhat-HoaTau-3089002.mp3" type="audio/mp3">
+		<source src="ChucMungSinhNhat-HoaTau-3089002.ogg" type="audio/oggs">
 	</audio>
 	<h1 style="color:green;font-weight:bolder;"> HAPPY BIRTHDAY!!! </h1>
 	<h2 style="color:red;"> Ha Hoa!!!!!!!!! </h2><p style='color:gray;font-size:250%'> I wish you full of happiness and love. All your dreams turn come true and lady luck visit you everyday. Happy birthday to one of the greatest people I’ve ever known. </p>
