fix reponsive mobilephone

--- a/web/deeplearning.html
+++ b/web/deeplearning.html
@@ -24,35 +24,33 @@
     </style>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-      <div class="container-fluid">
-        <!-- Navbar brand -->
-        <a class="navbar-brand" target="_blank" href="https://www.hcmut.edu.vn">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <div class="container-fluid">
+   <a class="navbar-brand" target="_blank" href="https://www.hcmut.edu.vn">
           <img src="img/bk.png" height="50" alt="logohcmut" loading="lazy"
             style="margin-top: -3px;" />
-        </a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
-          aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarExample01">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" active aria-current="page" href="#intro">Introduction</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#history">History</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#howitworks">Working Principles</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#achieve">Achievements</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#intro">Introduction</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#history">History</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#howitworks">Working Principles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#achieve" tabindex="-1" aria-disabled="true">Achievements</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
     <!-- Navbar -->
 
     <!-- Jumbotron -->
@@ -104,11 +102,11 @@
               alt="" />
             <h1 class="h1" id="howitworks">Working Principles</h1>
             <ul>
-              <li>Lorem</li>
-              <li>Ipsum</li>
-              <li>Dolor</li>
-              <li>Sit</li>
-              <li>Amet</li>
+              <li>Lorem ipsum dolor sit amet co</li>
+              <li>Lorem ipsum dolor sit amet co</li>
+              <li>Lorem ipsum dolor sit amet co</li>
+              <li>Lorem ipsum dolor sit amet co</li>
+              <li>Lorem ipsum dolor sit amet co</li>
             </ul>
             <h1 class="h1" id="achieve">Achievements</h1>
             <p>
@@ -149,6 +147,7 @@
 
    
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <!--Footer-->
 </body>
 </html>
